--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
     <title>Hotel</title>
 </head>
 <body>
-    <script src="reservacion.js" type="module"></script>
+    <script src="main.js" type="module"></script>
 </body>
 </html>
